[add] setup Tailwind CSS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <main class="container mx-auto mt-28 px-5 flex">
+      <%= yield %>
+    </main>
+    <h1 class="text-3xl font-bold text-blue-600">Tailwind Test</h1>
   </body>
 </html>
