--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,12 @@
-<div class="text-center mt-20">
-  <h1 class="text-4xl font-bold text-blue-600">Happy Tale</h1>
-  <p class="mt-4 text-gray-700">Tailwind CSS is working correctly 🎉</p>
+<div class="text-center mt-20 space-y-10">
+  <h1 class="text-4xl font-bold text-gray-800">親子の遊びと記録をつなぐ 🌳</h1>
+  <p class="text-lg text-gray-600">Happy Taleへようこそ！</p>
+
+  <div class="flex flex-col space-y-6 mt-10">
+    <%= link_to '🔍 遊び場を探す', '#', class: "bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
+
+    <%= link_to '📝 日記を記録する', '#', class: "bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
+
+    <%= link_to '👤 ログイン / 新規登録', '#', class: "bg-gray-500 hover:bg-gray-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
+  </div>
 </div>
