[add] implement user authentication with Devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,12 @@
       </ul>
     </nav>
 
+    <!-- 🌟 フラッシュメッセージ -->
+    <div class="text-center mt-4">
+      <p class="notice text-green-600 font-semibold"><%= notice %></p>
+      <p class="alert text-red-600 font-semibold"><%= alert %></p>
+    </div>
+
     <!-- 🌿 メインコンテンツ -->
     <main class="container mx-auto mt-10 px-5">
       <%= yield %>
