--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,10 +3,16 @@
   <p class="text-lg text-gray-600">Happy Taleへようこそ！</p>
 
   <div class="flex flex-col space-y-6 mt-10">
-    <%= link_to '🔍 遊び場を探す', '#', class: "bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
+    <%= link_to '🔍 遊び場を探す', '#', 
+        class: "bg-blue-500 hover:bg-blue-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
 
-    <%= link_to '📝 日記を記録する', '#', class: "bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
-
-    <%= link_to '👤 ログイン / 新規登録', '#', class: "bg-gray-500 hover:bg-gray-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
+    <% if user_signed_in? %>
+      <%= link_to '📝 日記を記録する', new_diary_path,
+          class: "bg-green-500 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
+    <% else %>
+      <%= link_to '👤 ログイン / 新規登録', new_user_session_path,
+          data: { turbo: false },
+          class: "bg-gray-500 hover:bg-gray-600 text-white font-semibold py-3 px-6 rounded-lg mx-auto w-72" %>
+    <% end %>
   </div>
 </div>
